inboxzero: add image
Signed-off-by: Abiola Ibrahim <git@abiosoft.com>

--- a/content/posts/1723891817_inboxzero.md
+++ b/content/posts/1723891817_inboxzero.md
@@ -53,6 +53,8 @@ A story for another day, probably.
 
 My preferred (and current) workflow is very much aligned with a productivity concept referred to as [Inbox Zero](https://web.archive.org/web/20140228205736/http://inboxzero.com/).
 
+![Inbox Zero](/images/1723891817_inboxzero_1.jpg#small)
+
 The idea is that your email inbox basically becomes a todo list of actionable emails. And once you are done with an email
 you move it away from inbox.
 
