general: update meta descriptions
Signed-off-by: Abiola Ibrahim <git@abiosoft.com>

--- a/content/posts/1425815730_isosx.md
+++ b/content/posts/1425815730_isosx.md
@@ -4,6 +4,7 @@ date = "2015-03-08T15:15:30+01:00"
 image = ""
 tags = ["osx", "linux"]
 title = "Is Mac OSX the Linux we wanted?"
+description = "Is Mac OSX the Linux we wanted?"
 toc =  false
 readTime = true
 autonumber = false
