--- a/content/posts/1723891817_inboxzero.md
+++ b/content/posts/1723891817_inboxzero.md
@@ -1,6 +1,7 @@
 +++
 title = 'Inbox Zero'
 date = 2024-08-17T11:50:18+01:00
+description = 'Inbox Zero'
 readTime = true
 tags = ["email", "inbox", "productivity"]
 +++
